Formulabar: fix sc_input_window height (when collapsed)
Formula input window (textarea) had different height from address input
- Set it at the same height as seen in toolbar.css:211

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -1168,6 +1168,7 @@ input[type='number']:hover::-webkit-outer-spin-button {
 
 /* formulabar */
 #sc_input_window.formulabar {
+	height: 29px;
 	border: 1px solid var(--color-border);
 	flex-grow: 1;
 	resize: none !important;
